--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -23,3 +23,11 @@ jobs:
       with:
         name: excel_splitter
         path: src/dist/windows
+        
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files:
+         src/dist/windows/excel_splitter.zip
+      env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
