--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -1,9 +1,6 @@
 name: Package Application with Pyinstaller
 
-on:
-  push:
-    tags:
-      - 'v*.*'
+on: push
 
 jobs:
   build:
@@ -21,12 +18,13 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: excel_splitter
-        path: src/dist/windows
+        path: src/dist
         
     - name: Release
       uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
       with:
         files:
-         src/dist/windows/excel_splitter.zip
+         excel_splitter.zip
       env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
