--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -25,6 +25,6 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files:
-         src/dist/excel_splitter.exe
+         excel_splitter.exe
       env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
