--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -1,6 +1,9 @@
 name: Package Application with Pyinstaller
 
-on: push
+on:
+  push:
+    tags:
+      - 'v*.*.*'
 
 jobs:
   build:
@@ -22,6 +25,5 @@ jobs:
         
     - name: Release
       uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
       env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
