--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -1,9 +1,6 @@
 name: Package Application with Pyinstaller
 
-on:
-  push:
-    tags:
-      - 'v*.*.*'
+on: push
 
 jobs:
   build:
@@ -25,5 +22,6 @@ jobs:
         
     - name: Release
       uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
       env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
